--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "immo-scraper",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -10,8 +10,7 @@
   "files": [
     "build/src"
   ],
-  "license": "Apache-2.0",
-  "keywords": [],
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "node --inspect node_modules/.bin/functions-framework --target=scrape -port=8080",
@@ -27,29 +26,18 @@
     "pretest": "npm run compile",
     "posttest": "npm run lint"
   },
-  "nodemonConfig": {
-    "watch": [
-      "./src"
-    ],
-    "ignore": [
-      ".git",
-      "node_modules/**",
-      "build"
-    ],
-    "delay": "1",
-    "ext": "js,ts,json"
-  },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
-    "concurrently": "^7.6.0",
     "gts": "^3.1.1",
-    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@discordjs/core": "^0.6.0",
     "@google-cloud/functions-framework": "^3.1.3",
     "@playwright/test": "^1.29.1",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.0.3",
     "playwright": "^1.29.1"
   }
 }
