--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@discordjs/core": "^0.6.0",
     "@google-cloud/functions-framework": "^3.1.3",
     "@playwright/test": "^1.29.1",
+    "dayjs": "^1.11.7",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "playwright": "^1.29.1"
