--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
         "object-curly-spacing": ["error", "always"],
-        "array-bracket-spacing": ["error", "always"],
+        "array-bracket-spacing": ["error", "never"],
         "computed-property-spacing": ["error", "never"],
         "arrow-parens": ["error", "as-needed"]
       }
