--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "files": [
     "build/src"
   ],
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "license": "MIT",
   "scripts": {
     "build": "tsc",
