(chore): change function region

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           name: 'immp-scrape'
           runtime: 'nodejs18'
+          region: 'europe-west3'
 
       - id: 'deploy_scheduler'
         run: \
