--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "gts": "^3.1.1",
-    "source-map-support": "^0.5.21",
     "typescript": "^4.9.4"
   },
   "dependencies": {
@@ -43,6 +42,7 @@
     "dayjs": "^1.11.7",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "playwright": "^1.29.1"
+    "playwright": "^1.29.1",
+    "source-map-support": "^0.5.21"
   }
 }
