--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -26,7 +26,10 @@ jobs:
           region: 'europe-west3'
           entry_point: 'scrape'
 
-      - id: 'deploy_scheduler'
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+
+      - name: 'deploy_scheduler'
         run: \
           gcloud scheduler jobs create http YOUR_SCHEDULER_JOB_NAME \
           --schedule="0 * * * *" \
