--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      - id: 'deploy_function'
+      - id: 'deploy'
+        name: 'Deploy Function'
         uses: 'google-github-actions/deploy-cloud-functions@v1'
         with:
           name: 'immp-scrape'
@@ -29,9 +30,9 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      - name: 'deploy_scheduler'
-        run: \
+      - name: 'Deploy Scheduler'
+        run: |
           gcloud scheduler jobs create http YOUR_SCHEDULER_JOB_NAME \
           --schedule="0 * * * *" \
           --http-method=GET \
-          --uri=${{steps.deploy.outputs.url}} \
+          --uri=${{steps.deploy.outputs.url}}'
