(feat): Add location do scheduler

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -34,5 +34,6 @@ jobs:
         run: >
           gcloud scheduler jobs create http trigger-immo-scraper
           --schedule="0 * * * *"
+          --location=europe-west3
           --http-method=GET
           --uri=${{steps.deploy.outputs.url}}
