--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dayjs": "^1.11.7",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "playwright": "^1.29.1"
+    "playwright": "^1.29.1",
+    "source-map-support": "^0.5.21"
   }
 }
