--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -39,6 +39,7 @@ jobs:
             --location=europe-west3
             --http-method=GET
             --uri=${{steps.deploy.outputs.url}}
+            --oidc-service-account-email=cloud-scheduler-sa@immo-scraper-387414.iam.gserviceaccount.com
           else
             echo "Job doesn't exist, creating..."
             gcloud scheduler jobs create http trigger-immo-scraper
@@ -46,4 +47,5 @@ jobs:
             --location=europe-west3
             --http-method=GET
             --uri=${{steps.deploy.outputs.url}}
+            --oidc-service-account-email=cloud-scheduler-sa@immo-scraper-387414.iam.gserviceaccount.com
           fi
