--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node --inspect node_modules/.bin/functions-framework --target=scrape -port=8080",
+    "start": "npx @google-cloud/functions-framework --target=scrape -port=8080",
     "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"yarn start\"",
     "prestart": "npm run build",
     "gcp-build": "npm run build",
@@ -33,16 +33,15 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "gts": "^3.1.1",
-    "typescript": "^4.9.4"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@discordjs/core": "^0.6.0",
     "@google-cloud/functions-framework": "^3.1.3",
-    "@playwright/test": "^1.29.1",
+    "@sparticuz/chromium": "^129.0.0",
     "dayjs": "^1.11.7",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "playwright-chromium": "^1.37.0",
+    "playwright-core": "^1.47.2",
     "source-map-support": "^0.5.21"
   }
 }
