--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "allowUnusedLabels": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2022", "DOM"],
+    "ignoreDeprecations": "5.0",
+    "lib": ["ESNext", "DOM"],
     "module": "CommonJS",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
@@ -12,9 +13,10 @@
     "pretty": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2022",
+    "target": "es2020",
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "esModuleInterop": true
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules/**"]
