--- a/package.json
+++ b/package.json
@@ -37,11 +37,10 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.1.3",
-    "@sparticuz/chromium": "^129.0.0",
+    "cheerio": "^1.0.0",
     "dayjs": "^1.11.7",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
-    "playwright-core": "^1.47.2",
     "source-map-support": "^0.5.21"
   }
 }
