--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "gts": "^3.1.1",
